# langfuse-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  openapi.json  pyproject.toml  pytest.ini  requirements.txt  run_enhancer.py  sitemap.xml
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
langfuse_agent/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  graph_config.py  langfuse_api.py  langfuse_models.py  mcp_config.json  mcp_server.py
langfuse_agent/agent/: IDENTITY.md
langfuse_agent/agent_data/: MCP_AGENTS.md  MEMORY.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json
langfuse_agent/api/: __init__.py  api_client_annotation_queues.py  api_client_base.py  api_client_datasets.py  api_client_management.py  api_client_observability.py  api_client_prompts_models.py
langfuse_agent/prompts/: main_agent.json
langfuse_agent/skills/langfuse-starter/: SKILL.md
langfuse_agent/tools/: __init__.py  datasets.py  management.py  observability.py  prompts.py
overview/: index.html
platform/: index.html
search/: search_index.json
tests/: conftest.py  test_agent_server.py  test_auth.py  test_concept_parity.py  test_init.py  test_langfuse_api.py  test_langfuse_models.py  test_main.py  test_mcp_brute_force.py  test_mcp_server.py
usage/: index.html
