[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-agent"
version = "0.1.7"
description = "Agent for interacting with Langfuse Observability API"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.10"
dependencies = [ "agent-utilities[mcp]>=0.2.12", "langfuse>=2.36.0", "requests>=2.8.1",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
agent = [ "agent-utilities[agent,logfire]>=0.2.12",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.2.12",]
test = [ "pytest", "pytest-asyncio",]

[project.scripts]
langfuse-mcp = "langfuse_agent.mcp_server:mcp_server"
langfuse-agent = "langfuse_agent.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
langfuse_agent = [ "mcp_config.json", "agent/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]
